tdd/legacy adds css fix on mobile screens

--- a/css/tdd.css
+++ b/css/tdd.css
@@ -305,18 +305,22 @@
 
     /* Label the data */
     table.responsive-table td:nth-of-type(1):before {
-        content: "Empresa";
+        content: "Curso";
     }
 
     table.responsive-table td:nth-of-type(2):before {
-        content: "Localidad";
+        content: "Empresa";
     }
 
     table.responsive-table td:nth-of-type(3):before {
-        content: "Fechas";
+        content: "Localidad";
     }
 
     table.responsive-table td:nth-of-type(4):before {
+        content: "Fechas";
+    }
+
+    table.responsive-table td:nth-of-type(5):before {
         content: "";
     }
 
